--- a/layout3.html
+++ b/layout3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style3.css" />
   </head>
   <body>
-    <header>
+    <main>
       <section class="page">
         <h1>Photo Gallery</h1>
         <div class="conteiner">
@@ -40,6 +40,6 @@
           </div>
         </div>
       </section>
-    </header>
+    </main>
   </body>
 </html>
